--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,37 @@
 /* Write your CSS here! */
+
+body {
+    background-color: rgb(206, 206, 206);
+    margin: 8px;
+    padding-right: 10px;
+  }
+.center {
+    text-align: center;
+} 
+p {
+    font-size: 17px;
+}
+h1{
+    text-align: center;
+}
+#mainHeading {
+    color: red;
+}
+#headerImg {
+    margin: 5px;
+    width: 97vw;
+    height: auto;
+}
+#main{
+    width: auto;
+    height: 400px;
+}
+.funParagraph {
+    color: green;
+}
+#Screenshots {
+    text-align: center;
+}
+footer {
+    text-align: center;
+}
